// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavbarEnd component test should render without crash with props 1`] = `
<div
  className="navbar-end navbarEnd CLass"
/>
`;

exports[`NavbarEnd component test should render without crash without props 1`] = `
<div
  className="navbar-end "
/>
`;
